--- a/src/styles/base/_global.scss
+++ b/src/styles/base/_global.scss
@@ -35,13 +35,16 @@ a {
 
 //Content Begrenzer
 .container {
-  
   width: 100%;
   max-width: 1440px;
   margin: 0 auto;
   padding: 0 16px;
 
   @include laptop {
+    padding: 0 32px;
+  }
+
+  @media (min-width: 1280px) {
     padding: 0 111px;
   }
 }
